# hermes-agent

./: FOUNDATION_NOTES.md  HERMES_LIVE_REPORT_2026-05-29.md  PAPER_self_evolving_hermes.md  PR_DRAFT.md
agent/: prompt_builder.py
apps/desktop/: package.json
apps/desktop/electron/: main.cjs
plugins/self-evolving-harness/: __init__.py  conftest.py  plugin.yaml  pyproject.toml  skill_program_library.py
plugins/self-evolving-harness/benchmark/: CALIBRATION_NOTES.md  _live_plugin_load.py  live_plugin_load_proof.json  phase3_results.json  phase3_tables.txt  swe_results.off.json  swe_results.on.json
plugins/self-evolving-harness/harness_core/: __init__.py  controller.py  efficacy.py  events.py  evolution_loop.py  evolver.py  gate.py  persistence.py  program_function.py  refiner.py  skill_program.py
plugins/self-evolving-harness/harness_core/layers/: h2_action_gate.py  h3_env_contract.py  h4_trajectory.py  h5_procedural_skill.py
plugins/self-evolving-harness/harness_core/memory/: __init__.py  provider.py
plugins/self-evolving-harness/tests/: test_controller.py  test_e2e_acceptance.py  test_efficacy.py  test_events.py  test_evolution_loop.py  test_evolver.py  test_file_persistence.py  test_gate.py  test_h2_action_gate.py  test_h3_env_contract.py  test_h4_trajectory.py  test_h5_procedural_skill.py  test_memory_provider.py  test_persistence.py  test_plugin_packaging.py  test_program_function.py  test_refiner.py  test_skill_program_library.py  test_walking_skeleton.py
scripts/: release.py
tests/: test_tui_gateway_shell_hooks.py
tui_gateway/: server.py
(+15 files in other folders)
